chore: update package version and add deploy script
style: enhance header styles and add active state indication

style: define CSS variables for consistent theming

fix: update stylesheet link in index.html

feat: implement header toggle functionality with active link highlighting

refactor: consolidate CSS imports into a single styles.css file

feat: add header.js for dynamic navbar behavior

--- a/src/css/root.css
+++ b/src/css/root.css
@@ -1,3 +1,49 @@
+:root {
+    --font-family-text: "Fira Code", monospace;
+    /* Heading Fonts */
+    --font-heading-color: #F8FAFC;
+    --font-heading-h1: normal normal 450 60px/66px var(--font-family-text);
+    --font-heading-h2: normal normal 450 48px/57.6px var(--font-family-text);
+    --font-heading-h3: normal normal 450 36px/46.8px var(--font-family-text);
+    --font-heading-h4: normal normal 450 30px/42px var(--font-family-text);
+    --font-heading-h5: normal normal 450 24px/33.6px var(--font-family-text);
+    --font-heading-h6: normal normal 450 16px/24px var(--font-family-text);
+    /* Body Fonts */
+    --font-body-color: #90A1B9;
+    --font-body-sm-bold: normal normal 700 14px/19.6px var(--font-family-text);
+    --font-body-sm: normal normal 450 14px/19.6px var(--font-family-text);
+    --font-body-md-bold: normal normal 700 16px/24px var(--font-family-text);
+    --font-body-md: normal normal 450 16px/24px var(--font-family-text);
+    --font-body-lg-bold: normal normal 700 18px/27px var(--font-family-text);
+    --font-body-lg: normal normal 450 16px/27px var(--font-family-text);
+    /* Body Link Fonts */
+    --font-body-link: normal normal 400 14px/19.6px var(--font-family-text);
+    /* Border Radius */
+    --radius-backdrop: 8px;
+    --radius-card: 16px;
+    --radius-checkbox: 2px;
+    --radius-icon: 4px;
+    --radius-box: 4px;
+    --radius-button: 8px;
+    --radius-input: 8px;
+    /* Colors */
+    --color-primary: #FFB86A;
+    --color-primary-hover: #FFD6A7;
+    --color-state: #45556C;
+    --color-state-hover: #62748E;
+    --color-slate: #F8FAFC;
+    --color-slate-hover: #1D293D;
+    --color-success: #00C950;
+    --color-success-hover: #05DF72;
+    --color-error: #FB2C36;
+    --color-error-hover: #FF6467;
+    --color-warning: #F0B100;
+    --color-warning-hover: #FDC700;
+    --color-link: #FFA1AD;
+    --color-link-hover: #FFCCD2;
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -17,5 +63,6 @@ html {
 body {
     margin: 0 auto;
     border: 1px solid #314158;
+    border-radius: 10px;
     height: calc(100vh - 32px);
 }
