--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,16 @@
 <nav class="Navbar">
     <div class="Navbar__header">
         <div class="Navbar__header-logo">
-            <h5 class="logo-title">michael-weaver</h5>
+            <a href="index.html" class="logo-title">mursel-sen</a>
         </div>
         <div class="Navbar__header-toggle">
-            <button class="navbar-toggle" id="navbar-toggle"></button>
+            <button class="navbar-toggle" id="navbar-toggle">
+                <i class="ri-menu-line" id="navbar-toggle-icon"></i>
+            </button>
         </div>
     </div>
-    <div class="Navbar__content">
+    <div class="Navbar__content  " id="navbar-menu">
+        <p class="Navbar__content-title"># navigate:</p>
         <ul class="Navbar__content-list">
             <li class="Navbar__content-item"><a href="index.html">_hello</a></li>
             <li class="Navbar__content-item"><a href="about.html">_about</a></li>
