--- a/src/css/header.css
+++ b/src/css/header.css
@@ -54,6 +54,7 @@
     display: flex;
     flex-direction: column;
     padding-top: 12px;
+    height: 100%;
 }
 
 .Navbar .Navbar__content:where(.active) .Navbar__content-title {
@@ -88,4 +89,8 @@
     font-size: 16px;
     line-height: 100%;
     letter-spacing: 0%;
+}
+
+.Navbar .Navbar__content:where(.active) .Navbar__content-list .Navbar__content-item:where(.active) {
+    border-bottom: 3px solid var(--color-primary) !important;
 }
