--- a/src/css/root.css
+++ b/src/css/root.css
@@ -57,7 +57,7 @@ html {
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    padding: 16px;
+    padding-block: 16px;
 }
 
 body {
@@ -65,4 +65,12 @@ body {
     border: 1px solid #314158;
     border-radius: 10px;
     height: calc(100vh - 32px);
+}
+
+#app {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
