--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <nav class="Navbar">
     <div class="Navbar__header">
         <div class="Navbar__header-logo">
-            <a href="index.html" class="logo-title">mursel-sen</a>
+            <a href="/" class="logo-title">mursel-sen</a>
         </div>
         <div class="Navbar__header-toggle">
             <button class="navbar-toggle" id="navbar-toggle">
@@ -9,7 +9,7 @@
             </button>
         </div>
     </div>
-    <div class="Navbar__content  " id="navbar-menu">
+    <div class="Navbar__content" id="navbar-menu">
         <p class="Navbar__content-title"># navigate:</p>
         <ul class="Navbar__content-list">
             <li class="Navbar__content-item"><a href="index.html">_hello</a></li>
