--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,7 +6,7 @@
             </li>
             <li class="Footer__content-item">
                 <a href="#">
-                    <i class="ri-instagram-fill"></i>
+                  <span>@</span>  <i class="ri-instagram-fill"></i>
                 </a>
             </li>
             <li class="Footer__content-item">
