Enhances build process and responsive design
Adds a new "live" build script for deployment to a separate branch.
Improves responsive design for footer, header, and main container elements.
Fixes base path configuration for production builds.
Cleans up index.html formatting.

No related issue mentioned.

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -57,7 +57,7 @@
     display: flex;
     flex-direction: column;
     padding-top: 12px;
-    width: 94%;
+    width: 93%;
     height: max-content;
 }
 
@@ -97,4 +97,25 @@
 
 .Navbar .Navbar__content:where(.active) .Navbar__content-list .Navbar__content-item:where(.active) {
     border-bottom: 3px solid var(--color-primary) !important;
+}
+
+@media (min-width: 768px) {
+    .Navbar {
+        height: auto;
+        flex-direction: row;
+    }
+
+
+
+    .Navbar .Navbar__header .Navbar__header-logo {
+        width: auto;
+    }
+
+    .Navbar .Navbar__header .Navbar__header-toggle {
+        display: none;
+    }
+
+    .Navbar .Navbar__content {
+        display: flex;
+    }
 }
