--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -39,3 +39,9 @@
     /* border: none; */
     border-left: 1px solid #314158;
 }
+
+@media (min-width: 768px) {
+    .Footer {
+        height: auto;
+    }
+}
