--- a/src/css/index.css
+++ b/src/css/index.css
@@ -61,3 +61,37 @@
 .container .media {
     display: none;
 }
+
+@media (min-width: 768px) {
+    #app {
+        background-image: url("../images/green-layer.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    main {
+        width: 100%;
+        height: 100%;
+
+    }
+
+    .container {
+
+        height: 100%;
+    }
+
+    .container .content {
+        background: transparent;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 130px;
+        padding: 80px;
+        background-position: center;
+
+    }
+
+
+
+
+}
