--- a/src/css/index.css
+++ b/src/css/index.css
@@ -41,6 +41,15 @@
     color: var(--color-link);
 }
 
+@media (min-width: 768px) and (max-width: 1024px) {
+    .container {
+        gap: 20px;
+    }
+
+    .container .content {
+        padding-left: 20px !important;
+    }
+}
 
 @media (min-width: 768px) {
 
