style: update layout and styles for improved responsiveness and aesthetics
Enhances layout responsiveness and updates styles

Refactors CSS for improved responsiveness, adding height constraints
and media queries. Reorganizes HTML by modularizing content and
externalizing partials. Updates navigation links and social media
references for better UX.

Relates to style improvement and layout update goals.

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,8 +5,8 @@
                 <p>find me in:</p>
             </li>
             <li class="Footer__content-item">
-                <a href="#">
-                  <span>@</span>  <i class="ri-instagram-fill"></i>
+                <a href="https://www.instagram.com/35.mursel/">
+                    <span>@</span> <i class="ri-instagram-fill"></i>
                 </a>
             </li>
             <li class="Footer__content-item">
@@ -19,7 +19,7 @@
     <div class="Footer__content-right">
         <ul class="Footer__content-list">
             <li class="Footer__content-item">
-                <a href="#">
+                <a href="https://github.com/murselsen">
                     <span>@murselsen</span> <i class="ri-github-fill"></i>
                 </a>
             </li>
