--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,9 +13,12 @@
         <p class="Navbar__content-title"># navigate:</p>
         <ul class="Navbar__content-list">
             <li class="Navbar__content-item"><a href="index.html">_hello</a></li>
-            <li class="Navbar__content-item"><a href="about.html">_about</a></li>
+            <li class="Navbar__content-item"><a href="about.html">_about_me</a></li>
             <li class="Navbar__content-item"><a href="project.html">_project</a></li>
             <li class="Navbar__content-item"><a href="contact-me.html">_contact-me</a></li>
+            <li class="Navbar__content-item lang"><a href="#"> <img src="./images/icon/lg_enUS.png" width="25"
+                        alt="english">
+                    _EN-US</a></li>
         </ul>
     </div>
 </nav>
