--- a/src/css/index.css
+++ b/src/css/index.css
@@ -76,13 +76,15 @@
 
     .container .media .profile {
         width: 800px;
-        height: 80%;
+        height: 100%;
+        max-height: 750px;
     }
 
     .container .media .profile .profile__image {
         width: 90%;
         max-width: 100%;
         height: 100%;
+        max-height: calc(100vh - 300px);
         object-fit: cover;
         object-position: center;
         border-radius: var(--radius-card);
