--- a/src/css/root.css
+++ b/src/css/root.css
@@ -71,8 +71,7 @@ html {
 
 body {
     margin: 0 auto;
-    border: 1px solid #314158;
-    border-radius: 10px;
+
     height: calc(100vh - 32px);
 }
 
@@ -82,6 +81,8 @@ body {
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    border-radius: 10px;
+    border: 1px solid #314158;
 }
 
 .container {
@@ -107,13 +108,24 @@ body {
 }
 
 @media (min-width: 768px) {
-
-
-    main {
-        width: 100%;
+    #app {
         height: 100%;
-
     }
+
+    #app header,
+    #app footer {
+        flex: 1;
+        max-height: 60px;
+    }
+
+    #app footer {
+        max-height: 50px;
+    }
+
+    #app main {
+        flex: 2;
+    }
+
 
     .container {
 
@@ -133,8 +145,16 @@ body {
         height: 100%;
         display: flex;
     }
+}
 
+@media (max-height: 1024px) {
+    .container .media {
+        align-items: end;
+    }
 
-
-
+    .container .media .profile {
+        width: 500px;
+        height: 100%;
+        max-height: 450px;
+    }
 }
