--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,7 +1,68 @@
 <div class="sidebar">
     <ul class="sidebar__accordion">
-        <li class="sidebar__accordion-item">personel-info"</li>
-        <li class="sidebar__accordion-item">contacts</li>
+        <li class="sidebar__accordion-item">
+            <h5 class="sidebar__accordion-item-title accordion">personel-info</h5>
+            <ul class="sidebar__accordion-item__list">
+                <li class="sidebar__accordion-item__list-item">name</li>
+                <li class="sidebar__accordion-item__list-item">age</li>
+                <li class="sidebar__accordion-item__list-item"></li>
+            </ul>
+        </li>
+        <li class="sidebar__accordion-item">
+            <h5 class="sidebar__accordion-item-title accordion">social-media</h5>
+            <ul class="sidebar__accordion-item__list">
+                <li class="sidebar__accordion-item__list-item">
+                    <a href="#" class="accordion">
+                        <i class="ri-github-fill"></i> <span>github@murselsen</span>
+                        <ul class="sidebar__accordion-item__list">
+                            <li class="sidebar__accordion-item__list-item">
+                                <a href="https://www.github.com/murselsen/">
+                                    <i class="ri-github-fill"></i> <span>github@murselsen</span>
+                                </a>
+
+                            </li>
+                        </ul>
+                    </a>
+                </li>
+
+                <li class="sidebar__accordion-item__list-item">
+                    <a href="https://www.instagram.com/35.mursel/">
+                        <i class="ri-instagram-fill"></i> <span>instagram@35.mursel</span>
+                    </a>
+
+                </li>
+                <li class="sidebar__accordion-item__list-item">
+                    <a href="https://www.linkedin.com/in/murselsen/">
+                        <i class="ri-linkedin-fill"></i> <span>linkedin@murselsen</span>
+                    </a>
+                </li>
+                <li class="sidebar__accordion-item__list-item">
+                    <a href="https://www.facebook.com/35mursel/">
+                        <i class="ri-facebook-fill"></i> <span>facebook@35mursel</span>
+                    </a>
+                </li>
+                <li class="sidebar__accordion-item__list-item">
+                    <a href="https://open.spotify.com/user/11186162261">
+                        <i class="ri-spotify-fill"></i> <span>spotify@11186162261</span>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="sidebar__accordion-item">
+            <h5 class="sidebar__accordion-item-title accordion">contacts</h5>
+            <ul class="sidebar__accordion-item__list">
+                <li class="sidebar__accordion-item__list-item">
+                    <a href="mailto:murselsen_35@hotmail.com">
+                        <i class="ri-mail-fill"></i> <span>@murselsen_35</span>
+                    </a>
+                </li>
+                <li class="sidebar__accordion-item__list-item">
+                    <a href="tel:+905331474924">
+                        <i class="ri-phone-fill"></i> <span>+90 533 147 49 24</span>
+                    </a>
+                </li>
+            </ul>
+        </li>
     </ul>
 </div>
 <div class="content">
