--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,6 +18,7 @@
 .container .content .mission {
     font: var(--font-heading-h6);
     color: var(--color-indigo);
+    text-transform: capitalize;
 }
 
 .container .content .code {
