--- a/src/css/root.css
+++ b/src/css/root.css
@@ -3,11 +3,17 @@
     --font-family-text: "Fira Code", monospace;
     /* Heading Fonts */
     --font-heading-color: #F8FAFC;
+    --font-heading-h1-bold: normal normal 700 60px/66px var(--font-family-text);
     --font-heading-h1: normal normal 450 60px/66px var(--font-family-text);
+    --font-heading-h2-bold: normal normal 700 48px/57.6px var(--font-family-text);
     --font-heading-h2: normal normal 450 48px/57.6px var(--font-family-text);
+    --font-heading-h3-bold: normal normal 700 36px/46.8px var(--font-family-text);
     --font-heading-h3: normal normal 450 36px/46.8px var(--font-family-text);
+    --font-heading-h4-bold: normal normal 700 30px/42px var(--font-family-text);
     --font-heading-h4: normal normal 450 30px/42px var(--font-family-text);
+    --font-heading-h5-bold: normal normal 700 24px/33.6px var(--font-family-text);
     --font-heading-h5: normal normal 450 24px/33.6px var(--font-family-text);
+    --font-heading-h6-bold: normal normal 700 16px/24px var(--font-family-text);
     --font-heading-h6: normal normal 450 16px/24px var(--font-family-text);
     /* Body Fonts */
     --font-body-color: #90A1B9;
@@ -18,6 +24,7 @@
     --font-body-lg-bold: normal normal 700 18px/27px var(--font-family-text);
     --font-body-lg: normal normal 450 16px/27px var(--font-family-text);
     /* Body Link Fonts */
+    --font-body-link-bold: normal normal 700 14px/19.6px var(--font-family-text);
     --font-body-link: normal normal 400 14px/19.6px var(--font-family-text);
     /* Border Radius */
     --radius-backdrop: 8px;
