--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,49 +1,49 @@
 <div class="sidebar">
     <ul class="sidebar__accordion">
         <li class="sidebar__accordion-item">
-            <h5 class="sidebar__accordion-item-title accordion">personel-info</h5>
+            <h5 class="sidebar__accordion-item-title accordion">personal-info</h5>
             <ul class="sidebar__accordion-item__list">
-                <li class="sidebar__accordion-item__list-item">name</li>
-                <li class="sidebar__accordion-item__list-item">age</li>
-                <li class="sidebar__accordion-item__list-item"></li>
+                <li class="sidebar__accordion-item__list-item">
+                    <a href="#" target="_blank">
+                        <i class="ri-file-pdf-2-line"></i>
+                        <span>Cv</span>
+                    </a>
+                </li>
             </ul>
         </li>
         <li class="sidebar__accordion-item">
             <h5 class="sidebar__accordion-item-title accordion">social-media</h5>
             <ul class="sidebar__accordion-item__list">
                 <li class="sidebar__accordion-item__list-item">
-                    <a href="#" class="accordion">
-                        <i class="ri-github-fill"></i> <span>github@murselsen</span>
-                        <ul class="sidebar__accordion-item__list">
-                            <li class="sidebar__accordion-item__list-item">
-                                <a href="https://www.github.com/murselsen/">
-                                    <i class="ri-github-fill"></i> <span>github@murselsen</span>
-                                </a>
-
-                            </li>
-                        </ul>
+                    <a href="https://www.github.com/murselsen/" target="_blank">
+                        <i class="ri-github-fill"></i>
+                        <span>@murselsen</span>
                     </a>
                 </li>
 
                 <li class="sidebar__accordion-item__list-item">
-                    <a href="https://www.instagram.com/35.mursel/">
-                        <i class="ri-instagram-fill"></i> <span>instagram@35.mursel</span>
+                    <a href="https://www.instagram.com/35.mursel/" target="_blank">
+                        <i class="ri-instagram-fill"></i>
+                        <span>@35.mursel</span>
                     </a>
 
                 </li>
                 <li class="sidebar__accordion-item__list-item">
-                    <a href="https://www.linkedin.com/in/murselsen/">
-                        <i class="ri-linkedin-fill"></i> <span>linkedin@murselsen</span>
+                    <a href="https://www.linkedin.com/in/murselsen/" target="_blank">
+                        <i class="ri-linkedin-fill"></i>
+                        <span>@murselsen</span>
                     </a>
                 </li>
                 <li class="sidebar__accordion-item__list-item">
-                    <a href="https://www.facebook.com/35mursel/">
-                        <i class="ri-facebook-fill"></i> <span>facebook@35mursel</span>
+                    <a href="https://www.facebook.com/35mursel/" target="_blank">
+                        <i class="ri-facebook-fill"></i>
+                        <span>@35mursel</span>
                     </a>
                 </li>
                 <li class="sidebar__accordion-item__list-item">
-                    <a href="https://open.spotify.com/user/11186162261">
-                        <i class="ri-spotify-fill"></i> <span>spotify@11186162261</span>
+                    <a href="https://open.spotify.com/user/11186162261" target="_blank">
+                        <i class="ri-spotify-fill"></i>
+                        <span>@11186162261</span>
                     </a>
                 </li>
             </ul>
@@ -53,12 +53,14 @@
             <ul class="sidebar__accordion-item__list">
                 <li class="sidebar__accordion-item__list-item">
                     <a href="mailto:murselsen_35@hotmail.com">
-                        <i class="ri-mail-fill"></i> <span>@murselsen_35</span>
+                        <i class="ri-mail-fill"></i>
+                        <span>@murselsen_35</span>
                     </a>
                 </li>
                 <li class="sidebar__accordion-item__list-item">
                     <a href="tel:+905331474924">
-                        <i class="ri-phone-fill"></i> <span>+90 533 147 49 24</span>
+                        <i class="ri-phone-fill"></i>
+                        <span>+90-533-147-49-24</span>
                     </a>
                 </li>
             </ul>
