--- a/src/partials/index.html
+++ b/src/partials/index.html
@@ -3,7 +3,7 @@
         <p class="message">Hi all. I am
         </p>
         <h1 class="username">Mürsel Şen</h1>
-        <p class="mission">> Junior Full Stack developer</p>
+        <p class="mission">> Junior Full Stack Feveloper</p>
     </div>
     <div class="content__link">
         <p class="message">// find my profile on Github:</p>
