--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -17,33 +17,33 @@
                 <li class="sidebar__accordion-item__list-item">
                     <a href="https://www.github.com/murselsen/" target="_blank">
                         <i class="ri-github-fill"></i>
-                        <span>@murselsen</span>
+                        <span>murselsen</span>
                     </a>
                 </li>
 
                 <li class="sidebar__accordion-item__list-item">
                     <a href="https://www.instagram.com/35.mursel/" target="_blank">
                         <i class="ri-instagram-fill"></i>
-                        <span>@35.mursel</span>
+                        <span>35.mursel</span>
                     </a>
 
                 </li>
                 <li class="sidebar__accordion-item__list-item">
                     <a href="https://www.linkedin.com/in/murselsen/" target="_blank">
                         <i class="ri-linkedin-fill"></i>
-                        <span>@murselsen</span>
+                        <span>murselsen</span>
                     </a>
                 </li>
                 <li class="sidebar__accordion-item__list-item">
                     <a href="https://www.facebook.com/35mursel/" target="_blank">
                         <i class="ri-facebook-fill"></i>
-                        <span>@35mursel</span>
+                        <span>35mursel</span>
                     </a>
                 </li>
                 <li class="sidebar__accordion-item__list-item">
                     <a href="https://open.spotify.com/user/11186162261" target="_blank">
                         <i class="ri-spotify-fill"></i>
-                        <span>@11186162261</span>
+                        <span>11186162261</span>
                     </a>
                 </li>
             </ul>
@@ -54,7 +54,7 @@
                 <li class="sidebar__accordion-item__list-item">
                     <a href="mailto:murselsen_35@hotmail.com">
                         <i class="ri-mail-fill"></i>
-                        <span>@murselsen_35</span>
+                        <span>murselsen_35</span>
                     </a>
                 </li>
                 <li class="sidebar__accordion-item__list-item">
@@ -68,5 +68,114 @@
     </ul>
 </div>
 <div class="content">
-
+    <div class="content__about" id="aboutContent">
+        <p class="content__about-tag">/**</p>
+        <p class="content__about-text">I'm Mürsel</p>
+        <p class="content__about-text">I live in İzmir, but my dreams are wide enough to reach every corner of the
+            world, line by line, through code. My
+            technical journey began with electricity meters, but over time, my growing passion for software opened up an
+            entirely
+            new path. Writing code, for me, is more than just a job—it's the most powerful way to create, to solve
+            problems, and to
+            express myself. I put on my music, grab a coffee, and start coding—becoming a little more myself with every
+            line I
+            write.</p>
+        <p class="content__about-text">Right now, I'm steadily progressing on the path to becoming a Full Stack
+            Developer. I'm eager to learn new technologies,
+            build different kinds of projects, and pursue this craft with passion. I'm ready to turn this passion from a
+            hobby into
+            a full-fledged career. Because I truly believe that anything done with passion eventually turns into
+            success. And I’m
+            determined to walk that path.</p>
+        <p class="content__about-tag">&nbsp;&nbsp;*/</p>
+    </div>
+    <div class="content__gh">
+        <h4 class="content__gh-title">Gists</h4>
+        <div class="content__gh-list">
+            <div class="content__gh-list-item">
+                <img src="https://api.murselsen.com//photos/IMG_20231015_135507.jpg" alt="Repo Name" width="500"
+                    height="150" style="object-fit: cover;" class="content__gh-list-item__img" />
+                <div class="content__gh-list-item__main">
+                    <h3 class="content__gh-list-item__title">Repo Name</h3>
+                    <p class="content__gh-list-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quisquam,
+                        voluptatum, unde, omnis
+                        voluptatibus
+                        esse suscipit.</p>
+                    <ul class="content__gh-list-item__language">
+                        <li>Javascript</li>
+                        <li>Css</li>
+                        <li>Html</li>
+                        <li>Php</li>
+                    </ul>
+                </div>
+                <div class="content__gh-list-item__footer">
+                    <ul class="Contributors">
+                        <li class="Contributors-item">
+                            <a href="#" class="Contributors-link" title="Username" target="_blank">
+                                <img src="#" alt="Username" class="Contributors-link__img" />
+                            </a>
+                        </li>
+                        <li class="Contributors-item">
+                            <a href="#" class="Contributors-link" title="Username" target="_blank">
+                                <img src="#" alt="Username" class="Contributors-link__img" />
+                            </a>
+                        </li>
+                        <li class="Contributors-item">
+                            <a href="#" class="Contributors-link" title="Username" target="_blank">
+                                <img src="#" alt="Username" class="Contributors-link__img" />
+                            </a>
+                        </li>
+                        <li class="Contributors-item">
+                            <a href="#" class="Contributors-link" title="Username" target="_blank">
+                                <img src="#" alt="Username" class="Contributors-link__img" />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="content__gh-list-item">
+                <img src="https://api.murselsen.com//photos/IMG_20231015_135507.jpg" alt="Repo Name" width="500"
+                    height="150" style="object-fit: cover;" class="content__gh-list-item__img" />
+                <div class="content__gh-list-item__main">
+                    <h3 class="content__gh-list-item__title">Repo Name</h3>
+                    <p class="content__gh-list-item__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quisquam,
+                        voluptatum, unde, omnis
+                        voluptatibus
+                        esse suscipit.</p>
+                    <ul class="content__gh-list-item__language">
+                        <li>Javascript</li>
+                        <li>Css</li>
+                        <li>Html</li>
+                        <li>Php</li>
+                    </ul>
+                </div>
+                <div class="content__gh-list-item__footer">
+                    <ul class="Contributors">
+                        <li class="Contributors-item">
+                            <a href="#" class="Contributors-link" title="Username" target="_blank">
+                                <img src="#" alt="Username" class="Contributors-link__img" />
+                            </a>
+                        </li>
+                        <li class="Contributors-item">
+                            <a href="#" class="Contributors-link" title="Username" target="_blank">
+                                <img src="#" alt="Username" class="Contributors-link__img" />
+                            </a>
+                        </li>
+                        <li class="Contributors-item">
+                            <a href="#" class="Contributors-link" title="Username" target="_blank">
+                                <img src="#" alt="Username" class="Contributors-link__img" />
+                            </a>
+                        </li>
+                        <li class="Contributors-item">
+                            <a href="#" class="Contributors-link" title="Username" target="_blank">
+                                <img src="#" alt="Username" class="Contributors-link__img" />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
