--- a/src/css/about.css
+++ b/src/css/about.css
@@ -81,7 +81,30 @@
 .container .content {
     width: 100%;
     height: 100%;
+    padding: 24px;
+    margin: 0;
+    gap: 24px;
 }
+
+.content .content__about {
+    color: var(--font-body-color);
+}
+
+.content .content__about .content__about-tag {
+    display: none;
+}
+
+.content .content__about .content__about-text {
+    display: inline-block;
+    margin-block: 2px;
+}
+
+
+.content .content__gh .content__gh-title {
+    display: none;
+    font: var(--font-heading-h4);
+}
+
 
 @media (min-width: 768px) {
     .container .sidebar {
@@ -95,8 +118,12 @@
 
     .container .content {
         margin: 0;
+        padding: 0;
         width: 100%;
         height: 100%;
+        display: flex;
+        flex-direction: row;
+        gap: 40px;
     }
 
 
@@ -110,4 +137,38 @@
     .sidebar .sidebar__accordion .sidebar__accordion-item .sidebar__accordion-item__list:where(.active) {
         display: none;
     }
+
+    .content .content__about,
+    .content .content__gh {
+        flex: 1;
+        border-width: 0px 1px 0px 1px;
+        border-style: solid;
+        border-color: var(--theme-theme-stroke, #314158);
+        padding: 32px 40px;
+
+    }
+
+    .content .content__about {
+        color: var(--font-body-color);
+        font: var(--font-body-lg);
+    }
+
+    .content .content__about .content__about-text::before {
+        content: "*";
+        display: inline-block;
+        color: var(--color-slate);
+        margin-inline-end: 16px;
+    }
+
+    .content .content__about .content__about-tag {
+        display: block;
+        color: var(--color-slate);
+    }
+
+    .content .content__about .content__about-text {
+        margin-block: 2.5px;
+        font: var(--font-body-lg);
+        padding-left: 16px;
+    }
+
 }
